RESOLVED FIXED63668
REGRESSION(r89952): r89952 added a wrong assertion in visible_units.cpp
https://bugs.webkit.org/show_bug.cgi?id=63668
Summary REGRESSION(r89952): r89952 added a wrong assertion in visible_units.cpp
Ryosuke Niwa
Reported 2011-06-29 16:08:32 PDT
820 if (type == Position::PositionIsOffsetInAnchor) { 821 ASSERT(type != Position::PositionIsOffsetInAnchor || !offset); should be 820 if (type == Position::PositionIsOffsetInAnchor) { 821 ASSERT(type == Position::PositionIsOffsetInAnchor || !offset); instead. Thanks Justin for finding this!
Attachments
Patch (1.25 KB, patch)
2011-06-29 16:13 PDT, Ryosuke Niwa
darin: review+
Ryosuke Niwa
Comment 1 2011-06-29 16:13:02 PDT
Ryosuke Niwa
Comment 2 2011-06-29 16:45:57 PDT
Note You need to log in before you can comment on or make changes to this bug.