2011-06-29  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Darin Adler.

        REGRESSION(r89952): r89952 added a wrong assertion in visible_units.cpp
        https://bugs.webkit.org/show_bug.cgi?id=63668

        We need to assert the offset to be zero only when the position is NOT offset in node.

        * editing/visible_units.cpp:
        (WebCore::startOfParagraph):


Canonical link: https://commits.webkit.org/79345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90064 268f45cc-cd09-0410-ab3c-d52691b4dbfc